# Dota2-Analyzer

./: .gitignore  README.md
api/: app.js
api/routes/backup/: common.js
backend/Backup_Data/: ability_upgrade_popularity.txt  hero_stats.txt
backend/Data/: .~lock.players.csv#
backend/Temporary_Data/: ability_upgrade_popularity copy.txt  ability_upgrade_popularity.txt
backend/src/app/: CMakeLists.txt  backend  defines.h  demo.txt  example  get_smallest_difference_data.cpp  manager.cpp  manager.h  manager_functions.cpp  modify_specific_line_in_txt.cpp  submanager_ability.cpp  submanager_ability.h  submanager_ability_upgrades.cpp  submanager_ability_upgrades.h  submanager_cluster.cpp  submanager_cluster.h  submanager_heroNames.cpp  submanager_heroNames.h  submanager_match.cpp  submanager_match.h  submanager_objectives.cpp  submanager_objectives.h  submanager_playerRatings.cpp  submanager_playerRatings.h  submanager_players.cpp  submanager_players.h  test.cpp  test.txt  test2.cpp
backend/src/app/Test/: ability_upgrades.txt  heroNames.txt
backend/src/app/requests/: requests.txt
backend/src/app/stat_dump/: ability_upgrade_popularity.txt  hero_pr.txt  hero_stats.txt  predict_winrate.txt
backend/src/app/test_drivers/: abilityUpgrades_manager_driver.cpp  ability_manager_driver.cpp
frontend/: package.json
frontend/public/: backupResults.json  cluster_region.json  first_blood.json  first_blood_winrate.json  hero_gold_and_xp.json  heroes_vs_winrate.json  index.html  modifyResults.json  predict_winrate.json  winrate_over_time.json
frontend/src/: App.js
(+42 files in other folders)
